# spotify-charts-pipeline

./: .env  .env.template  .gitignore  Dockerfile  README.md  docker-compose.tests.yml  docker-compose.yml  pyproject.toml
docker/: .env-non-dev  docker-bootstrap.sh  docker-init.sh  init_db.py  init_metabase.sh
scripts/: init.sql
src/: main.py
src/clients/: postgres.py  spotify.py
src/jobs/: spotify_chart_job.py
src/models/: __init__.py  artists.py  charts.py  ranks.py  tracks.py  user.py
src/services/: artists.py  charts.py  ranks.py  tracks.py
src/utils/: logging.py
src/wrappers/: artists.py  charts.py  ranks.py  tracks.py
superset/: Dockerfile
tests/: conftest.py  test_artists.py  test_charts.py  test_dummy.py  test_ranks.py  test_tracks.py  utils.py
